bk_ida/gccida/g3/print_mem_expr
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_mem_expr/src/print-rtl.c:551:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_mem_expr/src/print-rtl.c:571:19: error: use of undeclared identifier 'off_6C49D0'
fprintf( outfile, off_6C49D0, name->int_cst.int_cst.low); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_mem_expr/src/print-rtl.c:579:10: error: use of undeclared identifier 'stru_74575F'
fwrite( &stru_74575F, 1uLL, 0xCuLL, outfile); 
         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_mem_expr/src/obj/print-rtl.o] Error 1
